@startuml
skinparam classAttributeIconSize 0

left to right direction

class RegisterScooterUI {
}

class RegisterScooterController {
 +newScooter(maxBatteryCapacity,stateOfCharge,\npowerOutput,weight,maxPayload,pharmacyId)
 +registerScooter()
}

class RegisterScooter {
 +RegisterScooter()
 +newScooter(maxBatteryCapacity,stateOfCharge,\npowerOutput,weight,maxPayload,pharmacyId)
 +registerScooter(scoot)
 -validateScooter(scoot)
}

class Scooter {
 +newScooter(maxBatteryCapacity,stateOfCharge,\npowerOutput,weight,maxPayload,pharmacyId)
 +create()
 +addScooter(scoot)
 -save()
}


RegisterScooterUI ..> RegisterScooterController
RegisterScooterController ..> RegisterScooter
RegisterScooter "1"--"0..*" Scooter : registers


@enduml


